--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,31 +1,31 @@
 name: dash_fanclub_app
 description: A new Flutter project.
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0"
+  sdk: "3.11.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_launcher_icons: "^0.9.2"
-  carousel_slider: ^4.0.0
+  flutter_launcher_icons: ^0.14.4
+  carousel_slider: ^5.1.2
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.1.0
-  get_it: ^7.2.0
+  google_fonts: ^8.0.1
+  get_it: ^9.2.0
   chat_bubbles: ^1.2.0
-  intl: ^0.17.0
-  any_link_preview: ^2.0.8
-  linkify: ^4.1.0
-  flame: ^1.2.1
+  intl: ^0.20.2
+  any_link_preview: ^3.0.3
+  linkify: ^5.0.0
+  flame: ^1.35.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
@@ -35,6 +35,6 @@ flutter:
     - assets/images/game/
 
 flutter_icons:
-  image_path: "assets/icons/icon.png" 
+  image_path: "assets/icons/icon.png"
   android: true
   ios: true
